fixed vertical alignment

--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -30,7 +30,7 @@ img {
 
 body, html{
     background-color:#EAE9E1;
-      width:900px;
+      width:1100px;
     height:1100px;
     margin: auto;
 }
@@ -73,6 +73,13 @@ body, html{
     border:1px solid red;
 }
 
+.titlebox {
+  margin-top: 40px;
+  position: absolute;
+  background-position:center;
+  display:block;
+  
+}
 #wrapper {
   background-color:#EAE9E1;
   width: 20%;
@@ -81,6 +88,7 @@ body, html{
 
 .infobox {
     position: relative;
+    margin-top: 60px;
     background: url(/assets/smallinfoblankbox.png); 
     background-position: center;
     background-size: cover;
